# SongSoLib

./: README.en.md  README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/cn/yhsh/songlib/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/: cn_yhsh_songlib_SongUtils.h
app/src/main/java/cn/yhsh/songlib/: MainActivity.java  SongUtils.java
app/src/main/jni/: cn_yhsh_songlib_SongUtils.c
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/cn/yhsh/songlib/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
